--- a/Filtering Libraries.ipynb
+++ b/Filtering Libraries.ipynb
@@ -18,7 +18,7 @@
       "metadata": {
         "id": "PyLaxPRwKwjL"
       },
-      "execution_count": 4,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -33,15 +33,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "995c314d-08a1-4592-b07d-a335bb7e7efd"
+        "outputId": "ae7d1693-ba54-4da8-8d5c-1e916e3aa910"
       },
-      "execution_count": 5,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                                                Smiles        Name\n",
+              "                                                SMILES        NAME\n",
               "0                          c1(ncccn1)N(CC2)CCN2C3CCCC3  F6543-0989\n",
               "1                      c1(ncccn1)N(CC2)CCN2C\\C=C(/C)\\C  F6667-7326\n",
               "2         N(CC(CC1)CCN1c2ccncc2Cl)(C=NC(=C3)C4CC4)C3=O  F6606-1872\n",
@@ -58,7 +58,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1660c9da-44b6-4b5f-a587-5111fd67a5da\">\n",
+              "  <div id=\"df-e2bc05e8-a599-4faa-a6fb-9b810b9b645d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -78,8 +78,8 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Smiles</th>\n",
-              "      <th>Name</th>\n",
+              "      <th>SMILES</th>\n",
+              "      <th>NAME</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -142,7 +142,7 @@
               "</table>\n",
               "<p>405 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1660c9da-44b6-4b5f-a587-5111fd67a5da')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e2bc05e8-a599-4faa-a6fb-9b810b9b645d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -193,12 +193,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1660c9da-44b6-4b5f-a587-5111fd67a5da button.colab-df-convert');\n",
+              "          document.querySelector('#df-e2bc05e8-a599-4faa-a6fb-9b810b9b645d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1660c9da-44b6-4b5f-a587-5111fd67a5da');\n",
+              "          const element = document.querySelector('#df-e2bc05e8-a599-4faa-a6fb-9b810b9b645d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -221,17 +221,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 67
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df.to_csv (\"actives.sim\", \n",
+        "df.to_csv (\"actives.smi\", \n",
         "                  index = None,\n",
         "                  header=True)\n",
-        "df = pd.DataFrame(pd.read_csv(\"actives.sim\"))\n",
+        "df = pd.DataFrame(pd.read_csv(\"actives.smi\"))\n",
         "df"
       ],
       "metadata": {
@@ -240,15 +240,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "06e6cdeb-d99e-4c7f-a61a-09edcc8da3da"
+        "outputId": "61b9eee6-e485-41c1-990b-63ae21e85b92"
       },
-      "execution_count": 6,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "                                                Smiles        Name\n",
+              "                                                SMILES        NAME\n",
               "0                          c1(ncccn1)N(CC2)CCN2C3CCCC3  F6543-0989\n",
               "1                      c1(ncccn1)N(CC2)CCN2C\\C=C(/C)\\C  F6667-7326\n",
               "2         N(CC(CC1)CCN1c2ccncc2Cl)(C=NC(=C3)C4CC4)C3=O  F6606-1872\n",
@@ -265,7 +265,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-074c81d2-d1e3-4afa-9fb0-812821d6afbb\">\n",
+              "  <div id=\"df-0244ee94-170f-44c8-b952-bbf7e33c69af\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -285,8 +285,8 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Smiles</th>\n",
-              "      <th>Name</th>\n",
+              "      <th>SMILES</th>\n",
+              "      <th>NAME</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -349,7 +349,7 @@
               "</table>\n",
               "<p>405 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-074c81d2-d1e3-4afa-9fb0-812821d6afbb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0244ee94-170f-44c8-b952-bbf7e33c69af')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -400,12 +400,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-074c81d2-d1e3-4afa-9fb0-812821d6afbb button.colab-df-convert');\n",
+              "          document.querySelector('#df-0244ee94-170f-44c8-b952-bbf7e33c69af button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-074c81d2-d1e3-4afa-9fb0-812821d6afbb');\n",
+              "          const element = document.querySelector('#df-0244ee94-170f-44c8-b952-bbf7e33c69af');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -428,7 +428,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 69
         }
       ]
     },
@@ -439,25 +439,21 @@
       ],
       "metadata": {
         "id": "vPWZff-6gptF",
-        "outputId": "70f6cf74-d563-4a49-98c9-fd569152cf6b",
+        "outputId": "efef3c9d-d83d-42e2-f52f-3ee7a0e99b05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting rdkit\n",
-            "  Downloading rdkit-2022.9.5-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (29.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m29.4/29.4 MB\u001b[0m \u001b[31m24.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: Pillow in /usr/local/lib/python3.9/dist-packages (from rdkit) (8.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from rdkit) (1.22.4)\n",
-            "Installing collected packages: rdkit\n",
-            "Successfully installed rdkit-2022.9.5\n"
+            "Requirement already satisfied: rdkit in /usr/local/lib/python3.9/dist-packages (2022.9.5)\n",
+            "Requirement already satisfied: Pillow in /usr/local/lib/python3.9/dist-packages (from rdkit) (8.4.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.9/dist-packages (from rdkit) (1.22.4)\n"
           ]
         }
       ]
@@ -469,28 +465,19 @@
       ],
       "metadata": {
         "id": "eXd00L84gzql",
-        "outputId": "4ff612be-85e9-479d-a347-c4eb758b8174",
+        "outputId": "9db26e1b-fca2-440e-9959-9fb69412c5ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting docopt\n",
-            "  Downloading docopt-0.6.2.tar.gz (25 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Building wheels for collected packages: docopt\n",
-            "  Building wheel for docopt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for docopt: filename=docopt-0.6.2-py2.py3-none-any.whl size=13721 sha256=9bc8c0e84c0f9de892a22ef4abd7ec3abf440ff45eeee8cf2a07fb7b12574a7f\n",
-            "  Stored in directory: /root/.cache/pip/wheels/70/4a/46/1309fc853b8d395e60bafaf1b6df7845bdd82c95fd59dd8d2b\n",
-            "Successfully built docopt\n",
-            "Installing collected packages: docopt\n",
-            "Successfully installed docopt-0.6.2\n"
+            "Requirement already satisfied: docopt in /usr/local/lib/python3.9/dist-packages (0.6.2)\n"
           ]
         }
       ]
@@ -515,7 +502,7 @@
       "metadata": {
         "id": "PCM9Jq9PgT0d"
       },
-      "execution_count": 36,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -525,12 +512,12 @@
       ],
       "metadata": {
         "id": "NLA5iohQeOYh",
-        "outputId": "01d87f39-9d1b-4237-9ad6-9b8ebfadadd8",
+        "outputId": "5441cdfc-837c-4f56-89ff-28d458a88702",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,13 +534,25 @@
     {
       "cell_type": "code",
       "source": [
-        "! cat out.smi"
+        "! cat out.csv"
       ],
       "metadata": {
-        "id": "Eva75rTDh1ZV"
+        "id": "Eva75rTDh1ZV",
+        "outputId": "876664f7-e9e9-4c0c-99f8-0e3618013c78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 46,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SMILES,NAME,FILTER,MW,LogP,HBD,HBA,TPSA,Rot\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
